--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.1.8"
   }
 }
